# telegram-auction-bot

./: .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  example_config.py  pyproject.toml  requirements.txt
app/: filters.py  middlewares.py
app/admin/: handlers.py  keyboards.py
app/auction/: functions.py  keyboards.py
app/db/: engine.py  models.py  requests.py
app/user/: handler_functions.py  handlers.py  keyboards.py
